--- a/app/views/event_mailer/request_approval.html.erb
+++ b/app/views/event_mailer/request_approval.html.erb
@@ -5,6 +5,6 @@
 <h3>Actions</h3>
 <p>
   <%= link_to "Approve", run_admin_event_url(@event, aasm_event: :approve), class: "btn" %>
-  <%= link_to "Decline", run_admin_event_url(@event, aasm_event: :decline), class: "btn btn-alert ml-4" %>
+  <%= link_to "Decline", run_admin_event_url(@event, aasm_event: :decline), class: "btn btn-alert ms-4" %>
 </p>
 
